final remaining tasks done